--- a/schedule.html
+++ b/schedule.html
@@ -18,7 +18,7 @@
 <!-- Uncomment to show borders -->
 <!-- <style>*{border: 1px solid red;}</style> -->
 
-<title>Schedule & Pricing</title>
+<title>Schedule</title>
 </head>
 <body>
 
@@ -44,12 +44,12 @@
                         <a href="index.html" class="nav-link text-danger">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="signup.html" class="nav-link text-danger">Sign Up</a>
+                        <a href="signin.html" class="nav-link text-danger">Sign In</a>
                     </li>
                     <li class="nav-item">
                         <a href="signedout.html" class="nav-link text-danger">Sign Out</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-block">
                         <a href="#contact" class="nav-link text-danger">Contact</a>
                     </li>
                 </ul>
@@ -313,5 +313,6 @@
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
