--- a/signedout.html
+++ b/signedout.html
@@ -44,27 +44,45 @@
                         <a href="index.html" class="nav-link text-danger">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="schedule.html" class="nav-link text-danger">Schedule & Pricing</a>
+                        <a href="schedule.html" class="nav-link text-danger">Schedule</a>
                     </li>
                     <li class="nav-item">
-                        <a href="signup.html" class="nav-link text-danger">Sign Up</a>
+                        <a href="signin.html" class="nav-link text-danger">Sign In</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link text-danger">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
     </nav>
+
+    <!-- Sign Out -->
+    <section class="px-2">
+        <div class="d-flex bg-light container-fluid justify-content-center border border-danger signbox">
+
+            <form class="d-flex justify-content-center w-100 row mb-2">
+                <header class="text-center display-6">You Have Been Signed Out</header>
+                <hr class="danger container-fluid m-0">
+                <header>Log Back in:</header>
+                <div class="text-center">
+                        <button type="submit" class="btn btn-danger"><a href="signin.html" class="text-decoration-none text-light">Sign In</a></button>
+                </div>
+                <header>Don't have an account? Sign Up!:</header>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-danger"><a href="#" class="text-decoration-none text-light">Sign Up</a></button>
+                </div>
+              </form>
+        </div>
+    </section>
 
                 
     <!--Footer-->
     <footer id="contact">
         <div class="fixed-bottom bg-dark text-light d-flex row m-0 justify-content-center">
             <div class="footer row container-fluid p-3">
+
                 <div class="container-fluid text-center col-md-4">
                     <header class="display-6 text-decoration-underline">Contact</header>
-                    <div class="pt-2 pb-3">
+                    <div class="pt-2 m-0 m-md-2">
                         <a class="text-decoration-none text-light d-flex" href="https://maps.app.goo.gl/iaCVxEeeDA7mBHE66">
                             <div class="container-fluid p-0">
                                 <p class="m-0"> <span class="bi-geo-alt"></span>10033 Metropolitan Ave</p>
@@ -72,26 +90,29 @@
                             </div>
                         </a>
                     </div>
-                    <p class="text-break">
+                    <p class="text-break m-0 m-md-2">
                         <span class="bi-envelope"></span>
                         unabjj@gmail.com
                     </p>
-                    <p>
+                    <p class="m-0 m-md-2">
                         <span class="bi-telephone"></span>
                         (718) 268-0044
                     </p>
                 </div>
+
                 <div class="container-fluid col-md-4 d-flex align-self-center justify-content-center m-0">
                     <img src="static/unabjj_socabjj.png" alt="" class="img-fluid w-100">
                 </div>
 
                 <div class="container-fluid text-center col-md-4">
                     <header class="display-6 text-decoration-underline">Social</header>
-                    <p class="pt-2"><a href="https://www.facebook.com/UnaBjj/" class="text-decoration-none text-light"><span class="bi-facebook"></span> FACEBOOK</a></p>
-                    <p><a class="text-decoration-none text-light" href="https://www.instagram.com/unabjj/"><span class="bi-instagram"></span> INSTAGRAM</a></p>
+                    <p class="pt-2 m-0 m-md-2"><a href="https://www.facebook.com/UnaBjj/" class="text-decoration-none text-light"><span class="bi-facebook"></span> FACEBOOK</a></p>
+                    <p class="m-0 m-md-2"><a class="text-decoration-none text-light" href="https://www.instagram.com/unabjj/"><span class="bi-instagram"></span> INSTAGRAM</a></p>
                 </div>
+
             </div>
         </div>
     </footer>
+
 </body>
 </html>
